<package>
  <name>saw_ndi_tracker</name>
  <version>1.0.0</version>
  <description>
  sawNDITrackers
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawNDITracker</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
