<package>
  <name>saw_ndi_tracker_igtl</name>
  <version>1.0.0</version>
  <description>
  sawNDITracker with sawOpenIGTLink
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawNDITracker</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>
  <build_depend>saw_ndi_tracker</build_depend>
  <build_depend>saw_open_igt_link</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>
  <run_depend>saw_ndi_tracker</run_depend>
  <run_depend>saw_open_igt_link</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
