<package>
  <name>ndi_tracker_ros</name>
  <version>1.1.0</version>
  <description>
  sawNDITrackers ROS
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawNDITracker</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>saw_ndi_tracker</build_depend>
  <build_depend>cisst_ros_crtk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>saw_ndi_tracker</run_depend>
  <run_depend>cisst_ros_crtk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

  <export>
  </export>

</package>
